syntax = "proto3";

package campaign.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/louisbranch/fracturing.space/api/gen/go/campaign/v1;campaignv1";

// Invite represents a seat-targeted campaign invite.
message Invite {
  string id = 1;
  string campaign_id = 2;
  string participant_id = 3;
  InviteStatus status = 4;
  string created_by_participant_id = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

enum InviteStatus {
  INVITE_STATUS_UNSPECIFIED = 0;
  PENDING = 1;
  CLAIMED = 2;
  REVOKED = 3;
}

// InviteService provides operations for participant invites.
service InviteService {
  // Create a seat-targeted invite.
  rpc CreateInvite(CreateInviteRequest) returns (CreateInviteResponse);

  // Get an invite by ID.
  rpc GetInvite(GetInviteRequest) returns (GetInviteResponse);

  // List invites for a campaign.
  rpc ListInvites(ListInvitesRequest) returns (ListInvitesResponse);

  // Revoke an invite.
  rpc RevokeInvite(RevokeInviteRequest) returns (RevokeInviteResponse);
}

message CreateInviteRequest {
  // The campaign ID to create the invite for.
  string campaign_id = 1;

  // The participant seat this invite targets.
  string participant_id = 2;
}

message CreateInviteResponse {
  Invite invite = 1;
}

message GetInviteRequest {
  string invite_id = 1;
}

message GetInviteResponse {
  Invite invite = 1;
}

message ListInvitesRequest {
  // The campaign ID to list invites for.
  string campaign_id = 1;

  // The maximum number of invites to return.
  // If zero, the server defaults to 10. The server clamps values above 10 to 10.
  int32 page_size = 2;

  // A page token received from a prior ListInvitesResponse.
  string page_token = 3;
}

message ListInvitesResponse {
  repeated Invite invites = 1;
  string next_page_token = 2;
}

message RevokeInviteRequest {
  string invite_id = 1;
}

message RevokeInviteResponse {
  Invite invite = 1;
}
